@@ -109,9 +109,9 @@ class CreateAssessmentServiceTest {
             grantPortUserId.capture(),
             grantPortRoleId.capture());
 
-        assertEquals(expectedId, grantPortAssessmentId.getAllValues().get(0));
-        assertEquals(spaceOwnerId, grantPortUserId.getAllValues().get(0));
-        assertEquals(AssessmentUserRole.MANAGER.getId(), grantPortRoleId.getAllValues().get(0));
+        assertEquals(expectedId, grantPortAssessmentId.getAllValues().getFirst());
+        assertEquals(spaceOwnerId, grantPortUserId.getAllValues().getFirst());
+        assertEquals(AssessmentUserRole.MANAGER.getId(), grantPortRoleId.getAllValues().getFirst());
 
         assertEquals(expectedId, grantPortAssessmentId.getAllValues().get(1));
         assertEquals(param.getCurrentUserId(), grantPortUserId.getAllValues().get(1));
@@ -155,9 +155,9 @@ class CreateAssessmentServiceTest {
             grantPortUserId.capture(),
             grantPortRoleId.capture());
 
-        assertEquals(expectedId, grantPortAssessmentId.getAllValues().get(0));
-        assertEquals(currentUserId, grantPortUserId.getAllValues().get(0));
-        assertEquals(AssessmentUserRole.MANAGER.getId(), grantPortRoleId.getAllValues().get(0));
+        assertEquals(expectedId, grantPortAssessmentId.getAllValues().getFirst());
+        assertEquals(currentUserId, grantPortUserId.getAllValues().getFirst());
+        assertEquals(AssessmentUserRole.MANAGER.getId(), grantPortRoleId.getAllValues().getFirst());
     }
 
     @Test
