@@ -139,10 +139,10 @@ public class ErrorMessageKey {
     public static final String CREATE_ASSESSMENT_KIT_IS_PRIVATE_NOT_NULL = "create-assessment-kit.isPrivate.notNull";
 
     public static String entityNameSingleFirst(String fieldName) {
-        return String.format("entities.%s.single.first", fieldName);
+        return "entities.%s.single.first".formatted(fieldName);
     }
 
     public static String entityNamePlural(String fieldName) {
-        return String.format("entities.%s.plural", fieldName);
+        return "entities.%s.plural".formatted(fieldName);
     }
 }
